<resources>
    <string name="facebook_app_id">286687095959355</string>
    <string name="fb_login_protocol_scheme">fb286687095959355</string>
    <string name="app_name">EF Farmer</string>
    <string name="F_name">First Name <font color="#a6a6a6"><bold> * </bold></font> </string>
    <string name="M_name">Middle Name </string>
    <string name="L_name">Last Name <font color="#a6a6a6"><bold> * </bold></font> </string>
    <string name="birth_date">Date of Birth <font color="#ff0000"><bold> * </bold></font> </string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password<font color="#ff0000"><bold> * </bold></font> </string>
    <string name="confirm_pass">Confirm Password <font color="#ff0000"><bold> * </bold></font></string>
    <string name="user_name">User Name <font color="#ff0000"><bold> * </bold></font> </string>
    <string name="mobile">Mobile Number<font color="#ff0000"><bold> * </bold></font> </string>
    <string name="mobilee">Mobile Number </string>
    <string name="ownermobile">Owner Contact Number </string>
    <string name="Internet">Please Check Internet Connection</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="err_please_enter_username">Please Enter User Name</string>
    <string name="err_please_Full_name">Please Enter Full Name</string>
    <string name="err_please_L_name">Please Enter Last Name</string>
    <string name="err_please_date">Please Enter Date of Birth</string>
    <string name="err_please_email">Please Enter Email</string>
    <string name="err_please_password">Please Enter Password</string>
    <string name="err_please_confirm_password">Please Enter Confirm Password</string>
    <string name="err_please_valid_email">Please enter your Registered Email Id or User name</string>
    <string name="err_please_phone">Please Enter Mobile Number</string>
    <string name="err_please_address">Please Enter Address</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Father/Guardian Name<font color="#ff0000"><bold> * </bold></font> </string>
    <string name="address">Address1<font color="#ff0000"><bold> * </bold></font> </string>
    <string name="address2">Address2 </string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have">Already have an account?</string>
    <string name="select_gender">Please Select Gender</string>
    <string name="select_state">Please Select State</string>
    <string name="select_district">Please Select District</string>
    <string name="select_mandal">Please Select Mandal</string>
    <string name="select_village">Please Select Village</string>
    <string name="err_please_F_name">Please Enter First Name</string>
    <string name="server_error">An Error has Occurred.</string>
    <string name="select_role">Please Select Role</string>
    <string name="Total_Area">Total Area (In Acre)*</string>
    <string name="Adopted_Area">Adopted Area</string>
    <string name="Palm_Area">Palm Area</string>
    <string name="Gps_Area">Gps Area</string>
    <string name="pass_book">Passbook image</string>
    <string name="surveynumber">Adangal Number/Survey number</string>
    <string name="ROR_number">ROR (record on revenue)/khata Unique Number</string>
    <string name="village">Village Name <font color="#a6a6a6"><bold> * </bold></font></string>
    <string name="villagee">Village Name </string>
    <string name="mandal">Mandal / Taluka Name<font color="#a6a6a6"><bold> * </bold></font></string>
    <string name="mandall">Mandal / Taluka Name </string>
    <string name="pincode">Pin code</string>
    <string name="district">District Name</string>
    <string name="state">State <font color="#a6a6a6"><bold> * </bold></font></string>
    <string name="statee">State </string>
    <string name="land_details">Plot Details</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="passbook_number">Passbook number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="owner_name">Owner Name</string>
    <string name="err_please_Totalarea">Please Enter Total Area</string>
    <string name="err_please_adoprtedarea">Please Enter Adopted Area</string>
    <string name="err_please_gpsarea">Please Enter GPS Area</string>
    <string name="err_please_plotaddress">Please Enter Plot Address</string>
    <string name="err_please_survey_number">Please Enter Survey  Number</string>
    <string name="err_please_passbook_number">Please Enter  Passbook Number</string>
    <string name="err_please_owner_name">Please Enter  Owner Name</string>
    <string name="err_please_owner_contactnumber">Please Enter Owner Contact Number</string>
    <string name="select_plot_Status">Please Select Plot Status</string>
    <string name="select_ownership">Please Select Plot Ownership</string>
    <string name="log_off">Logout</string>
    <string name="alert_logout">Are you sure you want to Logout?</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">Confirmation</string>
    <string name="farmar_code">Farmer Code</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="fa_hu_name">Father/Husband Name</string>
    <string name="res_address">Residential Address</string>
    <string name="addresss">Address</string>
    <string name="addresss2">Address2 </string>
    <string name="dist">District <font color="#a6a6a6"><bold> * </bold></font></string>
    <string name="distt">District </string>
    <string name="pin">Pin Code</string>
    <string name="alter_mobile">Alternate Mobile \nNumber</string>
    <string name="date_birth">Date Of Birth</string>
    <string name="gender">Gender *</string>
    <string name="genderr">Gender </string>
    <string name="education">Education</string>
    <string name="country">Country</string>
    <string name="Category">Category</string>
    <string name="farmer_profile">Personal Details</string>
    <string name="plot_details">Plot Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="plot_address">Plot Basic Information</string>
    <string name="Bank_Details">Bank Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="Branch">Branch</string>
    <string name="IFSC_Code">IFSC Code</string>
    <string name="Account_Number">Account Number</string>
    <string name="Account_Name">Account Holder Name</string>
    <string name="Identity_Proofs">Identity Proofs</string>
    <string name="plot_code">Plot Code</string>
    <string name="status">Status</string>
    <string name="total_Area">Total Area</string>
    <string name="plot_ownership">Plot Ownership</string>
    <string name="no_plots">No Plots Available</string>
    <string name="no_IDS">No Identity Proofs</string>
    <string name="no_bankdetails">Bank Details  Not  Provided</string>
    <string name="create_account">Create Account</string>
    <string name="personal_details">Personal Details</string>
    <string name="address_details">Address Details</string>
    <string name="role">Role <font color="#a6a6a6"><bold> * </bold></font></string>
    <string name="error_confirm"><![CDATA[Password & Confirm Password not Matching]]></string>
    <string name="reg">Registration</string>
    <string name="choose_rester">Registration Type</string>
    <string name="new_user">New User</string>
    <string name="exist_user">Existing User</string>
    <string name="exist_user_reg">Existing User Registration</string>
    <string name="exist_role">Existing Role(S)</string>
    <string name="new_role">Add New Role *</string>
    <string name="isnri">Are you an NRI?</string>
    <string name="CountryName">Country Name<font color="#a6a6a6"><bold> * </bold></font></string>
    <string name="zipcode">Zip Code<font color="#a6a6a6"><bold> * </bold></font></string>
    <string name="learning">Encyclopedia</string>
    <string name="str_videos">Videos</string>
    <string name="str_pdf">Pdfs</string>
    <string name="no_pdfs">No Pdfs Found</string>
    <string name="no_videos">No Videos Found</string>
    <string name="view_in_map">View in Map</string>
    <string name="soilculutetype">Soil Culture Type</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="Prosperous">Prosperous</string>
    <string name="Complients">Complaints</string>
    <string name="issue_type">Complaint Type</string>
    <string name="comments">Comments</string>
    <string name="select_imagee">* Please attach atleast one Image .</string>
    <string name="image">Image Upload</string>
    <string name="record">Voice Recording</string>
    <string name="submit_req">Submit Request</string>
    <string name="valid_issue_type">Please Select Complaint Type</string>
    <string name="visit_success">Complaint Registered Successfully</string>
    <string name="summary">Summary</string>
    <string name="select_image">Please Attach At Least One Image or Video Record</string>
    <string name="requestCodeLabel">ComplaintCode</string>
    <string name="complete_details">View Complete Details</string>
    <string name="comp_date">Complaint Date</string>
    <string name="no_req_found">No Complaints Found</string>
    <string name="cancel_success">Complaint Closed Successfully</string>
    <string name="no_soil">No Soiltest Details Available</string>
    <string name="registered_emailid">Please enter your Registered Email Id  or User name below:</string>
    <string name="submit">Submit</string>
    <string name="emailorusername">Email or Username</string>
    <string name="select_plot">Select Plot<font color="#ff0000"><bold> * </bold></font> </string>
    <string name="downloaded">Downloaded Successfully</string>
    <string name="maps_api_key">AIzaSyBsui44kKBmX9m1DFXjFPO4rkL1n1ws4Fw </string>
    <string name="crop_code">Crop Code</string>
    <string name="crop">Crop</string>
    <string name="seed">Seed</string>
    <string name="datecrop">Date</string>
    <string name="PolicyNumber">Policy Number</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End Date</string>
    <string name="sum_insured">Sum Insured (Rs)</string>
    <string name="sum_insuredfa">Insured Sum for Farmer( Rs )</string>
    <string name="sum_insuredvfa">Insured Sum for Virtual Farmer( Rs )</string>
    <string name="Policyname">Policy Name</string>
    <string name="no_insc">No Insurance Details Available</string>
    <string name="no_crop">No Crop Details Available</string>
    <string name="reopen">Complaint Reopened</string>
    <string name="err_please_entercomments">Please Enter Comments</string>
    <string name="file_type">FileType</string>
    <string name="vedio">Video Recording</string>
    <string name="submit_report">Submit Report</string>
    <string name="valid_filetype_type">Please Select File Type</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="vedioecord">Record Video</string>
    <string name="no_rep">No  Reports Available</string>
    <string name="uploadeddate">Posted On</string>
    <string name="uploade_image">Uploaded Images</string>
    <string name="no_vendor">Vendor Service not Available</string>
    <string name="service_name">Service Name</string>
    <string name="Sub_Category">Sub Category</string>
    <string name="Brand_Name">Brand Name</string>
    <string name="size">Size</string>
    <string name="uom">UOM</string>
    <string name="price">Price</string>
    <string name="discount">Discount(%)</string>
    <string name="Contact_person">Contact Person</string>
    <string name="Contact_num">Contact Number</string>
    <string name="open_time">Opening Time</string>
    <string name="closing_time">Closing Time</string>
    <string name="discription">Description</string>
    <string name="priver">Provider Name</string>
    <string name="Rs">\u20B9</string>
</resources>