<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.calibrage.easyfarm.Views.Exsting_Farmer_list">
    <androidx.appcompat.widget.Toolbar
        android:visibility="visible"
        style="@style/ToolBarTheme.ToolBarStyle"
        android:id="@+id/toolbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green" >
        <TextView
            android:textColor="@color/white_new"
            android:textAlignment="textStart"
            android:text="Forgot Password"
            android:id="@+id/txt_name"
            style="@style/Common_textView_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/registered_emailid"
            android:textColor="@color/black2"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailorusername"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:paddingLeft="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"


            >


            <EditText
                android:id="@+id/forgotEmail_edittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16" />


        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/backToLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:padding="5dp"

                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgot_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/submit"
                android:textColor="@color/black2"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

